[FIX] web_responsive: Fix several issues * one2many tags now not hidden behind inputs. * Drawer icons now with much better look. * No overflow bug in small views when closing drawer. * Documented it when resizing viewport. (+1 squashed commit) * Whitespace cleanup.

--- a/web_app_drawer/static/src/less/main.less
+++ b/web_app_drawer/static/src/less/main.less
@@ -4,6 +4,16 @@
 body {
     width: 100%;
     height: 100%;
+
+    // Do not fix the search part, it's too big for small screens
+    @media (max-width: @screen-sm-max) {
+        overflow: inherit;
+        .openerp {
+            .oe-view-manager {
+                overflow: inherit;
+            }
+        }
+    }
 }
 
 main {
